--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
+:root {
+  --main-black: #282c34;
+  --main-white: white;
+  --main-blue: #61dafb
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
+  margin: 10px;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.heading {
+  background-color: var(--main-black);
+  height: 50%;
+  border-radius: 10px;
+  padding: 30px 60px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.heading .navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.heading .navbar img {
+  width: 50px;
+  height: auto;
+}
+#menu-icon {
+  height: 15px;
+  width: auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
