--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
   height: 100vh;
   margin: 10px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .heading {
@@ -57,4 +60,25 @@
   background-color: var(--main-white);
   padding: 20px 15px;
   font-size: 1.3rem;
+}
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 30px 60px;
+}
+.card {
+  width: 23%;
+}
+.card img {
+  width: 50%;
+  height: auto;
+}
+.card h2 {
+  padding-left: 15px;
+}
+.card p {
+  padding-left: 15px;
+  width: 70%;
+  opacity: 0.6;
 }
