--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
 }
 .heading-container button {
   margin-top: 20px;
-  width: 25%;
+  width: 150px;
   border: none;
   border-radius: 5px;
   background-color: var(--main-white);
@@ -83,4 +83,31 @@
   padding-left: 15px;
   width: 70%;
   opacity: 0.6;
+}
+
+@media (max-width: 1040px) {
+  .heading-container {
+    width: 60%;
+  }
+  .heading-container p {
+    margin: 0;
+    width: 100%;
+  }
+  .heading-container h1 {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 440px) {
+  .heading-container {
+    width: 80%;
+  }
+  .heading-container h1 {
+    font-size: 2rem;
+  }
+  .heading-container button {
+    width: 100px;
+    font-size: 1rem;
+    padding: 20px 10px;
+  }
 }
