--- a/src/App.css
+++ b/src/App.css
@@ -70,10 +70,10 @@
   padding: 30px 60px;
 }
 .card {
-  width: 23%;
+  width: 300px;
 }
 .card img {
-  width: 50%;
+  width: 170px;
   height: auto;
 }
 .card h2 {
@@ -85,7 +85,7 @@
   opacity: 0.6;
 }
 
-@media (max-width: 1040px) {
+@media (max-width: 950px) {
   .heading-container {
     width: 60%;
   }
@@ -95,6 +95,25 @@
   }
   .heading-container h1 {
     font-size: 3rem;
+  }
+}
+@media (max-width: 770px) {
+  .card-container {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card h2 {
+    padding-left: 0;
+  }
+  .card p {
+    padding-left: 0;
+    text-align: center;
   }
 }
 
